@@ -21,13 +21,11 @@ package org.apache.maven;
 import java.io.File;
 import java.util.ArrayList;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.Iterator;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 import org.apache.maven.artifact.handler.ArtifactHandler;
 import org.apache.maven.artifact.handler.DefaultArtifactHandler;
@@ -123,7 +121,7 @@ public class RepositoryUtils {
             nodeTrail.addAll(trail);
             nodeTrail.add(artifact.getId());
 
-            if (filter == null || filter.accept(node, Collections.emptyList())) {
+            if (filter == null || filter.accept(node, List.of())) {
                 artifact.setDependencyTrail(nodeTrail);
                 artifacts.add(artifact);
             }
@@ -145,7 +143,7 @@ public class RepositoryUtils {
         Map<String, String> props = null;
         if (org.apache.maven.artifact.Artifact.SCOPE_SYSTEM.equals(artifact.getScope())) {
             String localPath = (artifact.getFile() != null) ? artifact.getFile().getPath() : "";
-            props = Collections.singletonMap(MavenArtifactProperties.LOCAL_PATH, localPath);
+            props = Map.of(MavenArtifactProperties.LOCAL_PATH, localPath);
         }
 
         Artifact result = new DefaultArtifact(
@@ -169,16 +167,16 @@ public class RepositoryUtils {
 
         Artifact result = toArtifact(artifact);
 
-        List<Exclusion> excl = Optional.ofNullable(exclusions).orElse(Collections.emptyList()).stream()
+        List<Exclusion> excl = Optional.ofNullable(exclusions).orElse(List.of()).stream()
                 .map(RepositoryUtils::toExclusion)
-                .collect(Collectors.toList());
+                .toList();
         return new Dependency(result, artifact.getScope(), artifact.isOptional(), excl);
     }
 
     public static List<RemoteRepository> toRepos(List<ArtifactRepository> repos) {
-        return Optional.ofNullable(repos).orElse(Collections.emptyList()).stream()
+        return Optional.ofNullable(repos).orElse(List.of()).stream()
                 .map(RepositoryUtils::toRepo)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public static RemoteRepository toRepo(ArtifactRepository repo) {
@@ -280,7 +278,7 @@ public class RepositoryUtils {
 
         Map<String, String> props = null;
         if (system) {
-            props = Collections.singletonMap(MavenArtifactProperties.LOCAL_PATH, dependency.getSystemPath());
+            props = Map.of(MavenArtifactProperties.LOCAL_PATH, dependency.getSystemPath());
         }
 
         Artifact artifact = new DefaultArtifact(
@@ -294,7 +292,7 @@ public class RepositoryUtils {
 
         List<Exclusion> exclusions = dependency.getExclusions().stream()
                 .map(RepositoryUtils::toExclusion)
-                .collect(Collectors.toList());
+                .toList();
 
         return new Dependency(
                 artifact,
@@ -326,7 +324,7 @@ public class RepositoryUtils {
     }
 
     public static Collection<Artifact> toArtifacts(Collection<org.apache.maven.artifact.Artifact> artifactsToConvert) {
-        return artifactsToConvert.stream().map(RepositoryUtils::toArtifact).collect(Collectors.toList());
+        return artifactsToConvert.stream().map(RepositoryUtils::toArtifact).toList();
     }
 
     public static WorkspaceRepository getWorkspace(RepositorySystemSession session) {
