@@ -18,10 +18,8 @@
  */
 package org.apache.maven.impl;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.function.Predicate;
-import java.util.stream.Collectors;
 
 import org.apache.maven.api.Node;
 import org.apache.maven.api.NodeVisitor;
@@ -45,8 +43,8 @@ public abstract class AbstractNode implements Node {
     @Override
     public Node filter(Predicate<Node> filter) {
         List<Node> children =
-                getChildren().stream().filter(filter).map(n -> n.filter(filter)).collect(Collectors.toList());
-        return new WrapperNode(this, Collections.unmodifiableList(children));
+                getChildren().stream().filter(filter).map(n -> n.filter(filter)).toList();
+        return new WrapperNode(this, children);
     }
 
     @Override
